--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </aside>
 
     <nav>
+      <!--
       <a href="https://www.starwars.com/" target="_blank" class="memory">
         <small>15 de Maio de 2023</small>
         <h1>Início</h1>
@@ -40,7 +41,17 @@
 
         <p>teste</p>
       </a>
+    -->
+      <a href="https://www.strava.com/activities/9992989347?share_sig=5EA2114E1696877097&utm_medium=social&utm_source=ios_share" target="_blank" class="memory">
+        <small>7 de Outubro de 2023</small>
+        <h1>Primeiro treino longo - 4,45km</h1>
+        <div>
+          <img src="./assets/jornada.png" alt="Treino longo" />
+        </div>
 
+        <p>teste</p>
+      </a>
+      
       <a
         href="https://www.tecmundo.com.br/novidades"
         target="_blank"
