--- a/index.html
+++ b/index.html
@@ -42,16 +42,24 @@
         <p>teste</p>
       </a>
     -->
-      <a href="https://www.strava.com/activities/9992989347?share_sig=5EA2114E1696877097&utm_medium=social&utm_source=ios_share" target="_blank" class="memory">
+      <a
+        href="https://www.strava.com/activities/9992989347?share_sig=5EA2114E1696877097&utm_medium=social&utm_source=ios_share"
+        target="_blank"
+        class="memory"
+      >
         <small>7 de Outubro de 2023</small>
         <h1>Primeiro treino longo - 4,45km</h1>
         <div>
-          <img src="./assets/jornada.png" alt="Treino longo" />
+          <img src="./assets/paisagem.jpeg" alt="Treino longo" />
         </div>
 
-        <p>teste</p>
+        <p>
+          Primeiro treino de corrida longa. <br />
+          Realizado no Alphaville. <br />
+          Bauru - SP
+        </p>
       </a>
-      
+
       <a
         href="https://www.tecmundo.com.br/novidades"
         target="_blank"
