--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <strong>Túlio Gonçalves</strong>
       </p>
 
-      <span>Mensagem de teste</span>
+      <span>Changing my life</span>
     </aside>
 
     <nav>
