Update index.html with new post

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <strong>Túlio Gonçalves</strong>
       </p>
 
-      <span>Changing my life</span>
+      <span>Mudando de vida!</span>
     </aside>
 
     <nav>
@@ -42,6 +42,26 @@
         <p>teste</p>
       </a>
     -->
+
+      <a
+        href="https://www.strava.com/activities/9992989347?share_sig=5EA2114E1696877097&utm_medium=social&utm_source=ios_share"
+        target="_blank"
+        class="memory"
+      >
+        <small>10 de Outubro de 2023</small>
+        <h1>Tiro - 4,51km</h1>
+        <div>
+          <img src="./assets/tiro_2.jpeg" alt="Treino longo" />
+        </div>
+
+        <p>
+          Treino de tiro. <br />
+          Realizado no StudioMR <br />
+          Bauru - SP
+        </p>
+      </a>
+
+      
       <a
         href="https://www.strava.com/activities/9992989347?share_sig=5EA2114E1696877097&utm_medium=social&utm_source=ios_share"
         target="_blank"
