--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <small>10 de Outubro de 2023</small>
         <h1>Tiro - 4,51km</h1>
         <div>
-          <img src="./assets/tiro_2.jpeg" alt="Treino longo" />
+          <img src="./assets/tiro_2.jpg" alt="Tiro - 2" />
         </div>
 
         <p>
@@ -63,9 +63,7 @@
 
       
       <a
-        href="https://www.strava.com/activities/9992989347?share_sig=5EA2114E1696877097&utm_medium=social&utm_source=ios_share"
-        target="_blank"
-        class="memory"
+       
       >
         <small>7 de Outubro de 2023</small>
         <h1>Primeiro treino longo - 4,45km</h1>
